# TinyD3D

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
core/: CMakeLists.txt  common.hpp
core/d3d12Backend/: Context.cpp  Context.hpp  GPUResource.hpp  Pipelinestate.cpp  Pipelinestate.hpp  Queue.cpp  Queue.hpp  README.md  Shader.cpp  Shader.hpp
core/d3dapp/: application.cpp  application.hpp  elemimgui.cpp  elemimgui.hpp  elemwindow.cpp  elemwindow.hpp  scene.hpp
core/utils/: gltfloader.cpp  gltfloader.hpp  helper.hpp  pch.hpp
samples/: CMakeLists.txt
samples/gltfViewer/: CMakeLists.txt  gltfViewerSample.cpp  gltfViewerSample.hpp  main.cpp
samples/gltfViewer/models/: testScene.gltf
samples/helloResourcesBinding/: CMakeLists.txt  hellpResourcesBinding.cpp  hellpResourcesBinding.hpp  main.cpp
samples/helloResourcesBinding/shaders/: quad.hlsl  shaderio.h
samples/helloTriangle/: CMakeLists.txt  helloTriangle.cpp  helloTriangle.hpp  main.cpp
samples/helloTriangle/shaders/: transform.hlsl
samples/helloWorkGraph/: CMakeLists.txt  helloWorkGraph.cpp  helloWorkGraph.hpp  main.cpp
samples/helloWorkGraph/shaders/: helloWorkGraph.hlsl
